# named

./: .gitignore  .travis.yml  ChangeLog.md  LICENSE  README.md  named.cabal  stack.yaml
.github/workflows/: ci.yml  haskell-ci.yml
src/: Named.hs
src/Named/: Internal.hs  Varargs.hs
test/: Test.hs  TestImport.hs
