name:                named
version:             0.1.0.0
synopsis:            Named parameters (keyword arguments) for Haskell
-- description:
license:             BSD3
license-file:        LICENSE
author:              Vladislav Zavialov
maintainer:          Vladislav Zavialov <vlad.z.4096@gmail.com>
-- copyright:
category:            Control
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Named
  build-depends:       base >=4.9 && <4.12
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -fno-warn-unticked-promoted-constructors

test-suite regression
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  build-depends:       base >=4.9 && <4.12,
                       named
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -fno-warn-missing-signatures